--- a/templates/base.html
+++ b/templates/base.html
@@ -383,7 +383,7 @@
   <script src="static/bootstrap3/plugins/select2/select2.min.js" type="text/javascript"></script>
   <script src="static/app/scripts/vendor/wysihtml5-0.3.0.min.js" ></script>
   <script src="static/app/scripts/vendor/bootstrap-wysihtml5.js" ></script>
-  <script src="http://maps.google.com/maps/api/js?key=AIzaSyD___EKeONhEP1JDWsNQi0zQhlGGzuwRI4&sensor=true" type="text/javascript"></script>
+  <!--<script src="http://maps.google.com/maps/api/js?key=AIzaSyD___EKeONhEP1JDWsNQi0zQhlGGzuwRI4&sensor=true" type="text/javascript"></script>-->
   <script src="/static/app/scripts/vendor/jquery.ui.map.min.js"></script> 
   <script type="text/javascript" src="/static/app/scripts/vendor/jquery.ui.map.services.js">
   </script>
