Voice search proof of concept

--- a/templates/base.html
+++ b/templates/base.html
@@ -387,6 +387,8 @@
   <script src="/static/app/scripts/vendor/jquery.ui.map.min.js"></script> 
   <script type="text/javascript" src="/static/app/scripts/vendor/jquery.ui.map.services.js">
   </script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/1.1.0/annyang.min.js"></script>
+
   <!-- END CORE PLUGINS -->
   
 
