--- a/templates/search/list.html
+++ b/templates/search/list.html
@@ -111,7 +111,7 @@
                   
                   
                   <div class="blank_slate_arrow"></div>
-                  <div class="thumbnail blank_slate_body">
+                  <div class="thumbnail blank_slate_body" ng-hide="isLoading">
                       
                       <p class="lead">{{ _('No results found, try with another term') }}</p>
                   </div>
