--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -188,19 +188,30 @@
             <div class="inner-cards-container">
             
               <div ng-repeat="lead in leads" class="col-lg-4 col-md-3 col-sm-6 col-xs-12" >
-                <div class="dashboard-stat cards-small">
+                <div class="dashboard-stat cards-small" droppable ng-drop="dropTag(lead)">
                   
                   <div class="details">
                     <a href="/#/leads/show/<%= lead.id %>"><h2 class="cardTitle">
                       <%= lead.firstname %> <%= lead.lastname %>
                     </h2></a>
-                    <div class="desc">
+                  <div class="desc">
+                    <div class="row margin-bottom-5">
+                      <div class="col-md-12">
                       <span ng-show="lead.status" class="contact-title" >Updated at:  <%=lead.updated_at | date:'yyyy-MM-dd - HH:mm:ss ' %> </span>
                       <span ng-show="lead.status" class="contact-title" >Status: <a class="desc" href="/#/search/type:Lead <%=lead.status%>">#<%=lead.status %></a>  </span>
                       <br>
                       <span ng-show="lead.title"><a  class="desc" href="/#/search/type:Lead <%=lead.title%>">#<%=lead.title%></a></span>
                       <span ng-show="lead.company"> <span ng-show="lead.title" class="contact-title">,</span> <a  class="desc" href="/#/search/type:Lead <%=lead.company%>">#<%=lead.company%></a></span>
+                     </div>
+                     </div>
+                   
+                    <div class="row">
+                          <div class="col-md-12">
+                               <span ng-repeat="tag in lead.tags"   class="pull-right task-label badge badge-roundless" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %></span>
+                          </div>
+                          
                     </div>
+                  </div>
                   </div>
                                   
                 </div>
