--- a/templates/admin/settings/settings.html
+++ b/templates/admin/settings/settings.html
@@ -23,8 +23,8 @@
 </div>
 <div class="container-fluid"   >
 <!--HKA 11.12.2013 Settings  -->
-  <div class="row-fluid">
-     <div class="span12">
+  <div class="row">
+     <div class="col-md-12">
                             
             <h2>
             <a href="/#/accounts/" data-toggle="tooltip" data-placement="bottom" title="Back to Accounts">
@@ -34,8 +34,8 @@
           </div>
   </div>
   <!--HKA 11.12.2013 Tabs -->
-  <div class="row-fluid" >
-       <div class="span12">
+  <div class="row" >
+       <div class="col-md-12">
               <!-- BEGIN PORTLET-->
               <div class="portlet paddingless">
                  <div class="portlet-body">
@@ -49,7 +49,7 @@
                     <div class="tab-content">
                       <div class="tab-pane active" id="tab_1_1" ng-show="selectedTab == 1">
                         
-                            <div class="row-fluid cards-container">
+                            <div class="row cards-container">
                          <div class="btn-group relbutton">
             
                                 <button  ng-click="addOppStagetModal()" id="sample_editable_1_new" class="btn red">
@@ -57,9 +57,12 @@
                                 </button>
                                 
                           </div>
+                           <div class="row cards-container">
+
+                           <div class="col-md-12">
                             <div class="inner-cards-container">
-                              <div  class="span3 responsive" ng-repeat="stage in opportunitystages" data-tablet="span6" data-desktop="span3">
-                                <div class="dashboard-stat cards">
+                              <div  class="col-lg-3 col-md-3 col-sm-6 col-xs-12" ng-repeat="stage in opportunitystages" >
+                                <div class="dashboard-stat cards-small">
                                   
                                   <div class="details">
                                     <a> <h3 class="relatedcardTitle">
@@ -79,9 +82,11 @@
                               
                               
                               </div>
-                              
+                              </div>
+                              </div>
+                             
                             </div>
-                            <div class="row-fluid">
+                            <div class="row">
                                 <div class="pagination pull-right" ng-hide="isLoading">
                                       
                                       <ul>
@@ -171,7 +176,7 @@
                       </div>
                       <div class="tab-pane active" id="tab_1_2" ng-show="selectedTab == 2">
                         
-                           <div class="row-fluid cards-container">
+                           <div class="row cards-container">
                          <div class="btn-group relbutton">
             
                                 <button  ng-click="addCasestatustModal()" id="sample_editable_1_new" class="btn red">
@@ -179,9 +184,12 @@
                                 </button>
                                 
                           </div>
+                           <div class="row cards-container">
+
+                           <div class="col-md-12">
                             <div class="inner-cards-container">
-                              <div  class="span3 responsive"  data-tablet="span6" ng-repeat="casestate in casesatuses " data-desktop="span3">
-                                <div class="dashboard-stat cards">
+                              <div  class="col-lg-3 col-md-3 col-sm-6 col-xs-12"   ng-repeat="casestate in casesatuses " >
+                                <div class="dashboard-stat cards-small">
                                   
                                   <div class="details">
                                     <a href="/#/"><h3 class="relatedcardTitle">
@@ -199,9 +207,11 @@
                               
                               
                               </div>
-                              
+                              </div>
+                              </div>
+                             <!-- -- >
                             </div>
-                            <div class="row-fluid">
+                            <div class="row">
                                 <div class="pagination pull-right" ng-hide="isLoading">
                                       
                                       <ul>
@@ -279,7 +289,7 @@
                        
                       <div class="tab-pane active" id="tab_1_3" ng-show="selectedTab == 3">
                           
-                         <div class="row-fluid cards-container">
+                         <div class="row cards-container">
                          <div class="btn-group relbutton">
             
                                 <button  ng-click="addLeadstatustModal()" id="sample_editable_1_new" class="btn red">
@@ -288,7 +298,7 @@
                                 
                           </div>
                             <div class="inner-cards-container">
-                              <div  class="span3 responsive" ng-repeat="leadstat in leadstatuses"  data-tablet="span6" data-desktop="span3">
+                              <div  class="col-lg-4 col-md-3 col-sm-6 col-xs-12" ng-repeat="leadstat in leadstatuses" >
                                 <div class="dashboard-stat cards">
                                   
                                   <div class="details">
@@ -309,7 +319,7 @@
                               </div>
                               
                             </div>
-                            <div class="row-fluid">
+                            <div class="row">
                                 <div class="pagination pull-right" ng-hide="isLoading">
                                       
                                       <ul>
