--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -210,7 +210,7 @@
                 <form ng-submit="addNewTask()">
                     <div class="form-group">
                       <div class="input-icon right">
-                        <input taggable taggabledata="taggableOptions" ng-model="newTask.title" id="new_task_text" class="form-control"  placeholder="Add new task ..." />
+                        <input taggable taggabledata="taggableOptions" ng-model="newTask.title" id="new_task_text" class="form-control"  placeholder="Add new task ..." autofocus/>
                       </div>
                     </div>
                     <div class="btn-group pull-right new-task-reminder">
@@ -306,7 +306,7 @@
                                          
                                        </div>
                                         <div class="col-md-5 col-xs-12">
-                                            <span ng-repeat="task_tag in task.tags" class="pull-right task-label badge badge-roundless" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;">
+                                            <span ng-repeat="task_tag in task.tags" class="pull-right task-label task-tag badge" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;">
                                                 <%= task_tag.name %>
                                             </span>
                                             <span ng-repeat="assignee in task.assignees" class="pull-right">
