after changing draggable tags style to radio labels

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,7 @@
   <link href="static/bootstrap3/css/plugins.css" rel="stylesheet" type="text/css"/>
   <link href="static/bootstrap3/css/pages/tasks.css" rel="stylesheet" type="text/css"/>
   <link href="static/bootstrap3/css/themes/light.css" rel="stylesheet" type="text/css" id="style_color"/>
+   <link rel="stylesheet" href="static/plugins/ngQuickDate/ng-quick-date.css"/>
    <link rel="stylesheet" href="static/css/datetimepicker.css"/>
   <link href="static/bootstrap3/css/custom.css" rel="stylesheet" type="text/css"/>
   <link href="static/bootstrap3/css/test.css" rel="stylesheet" type="text/css"/>
@@ -310,6 +311,7 @@
   <script src="static/app/scripts/vendor/ui-bootstrap-0.5.0.js" ></script>
   <script src="static/app/scripts/vendor/ui-bootstrap-tpls-0.5.0.js"></script>
   <script src="static/app/scripts/vendor/moment.min.js"></script>
+  <script src="static/plugins/ngQuickDate/ng-quick-date.js"></script>
   <script src="static/app/scripts/vendor/datetimepicker.js"></script>
   <script src="static/bootstrap3/plugins/bootstrap-colorpicker2/js/bootstrap-colorpicker.js" type="text/javascript"></script>
 
